# blockc

./: .gitignore  Cargo.toml  Makefile.toml  README.md  pubspec.yaml  tool.sh
android/: .project
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/blockc/: MainActivity.kt
android/app/src/profile/: AndroidManifest.xml
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
native/adder/: Cargo.toml
native/adder-ffi/: Cargo.toml  build.rs
native/hb/: Cargo.toml
native/hb-ffi/: Cargo.toml  Makefile  binding.h  build.rs  tool.sh
native/hb-ffi/csrc/: main.c
native/hb-ffi/src/: lib.rs
native/hb-ffi/tests/: ws_test.rs
native/hb/examples/memcheck/: Cargo.toml  tool.sh
native/hb/examples/memcheck/hello/: Cargo.toml
native/hb/examples/memcheck/hello/src/: lib.rs
native/hb/examples/memcheck/src/: main.rs
native/hb/src/: client.rs  context.rs  lib.rs  ws.rs
native/hb/tests/: client_test.rs
native/scrap-ffi/: Cargo.toml  binding.h  build.rs
native/scrap-ffi/src/: lib.rs
native/scrap-ffi/tests/: ping_test.rs
pure_dart/hb_dart/: .gitignore  pubspec.yaml
pure_dart/scrap_dart/: .gitignore  pubspec.yaml
test/: widget_test.dart
web/: index.html  manifest.json
