[package]
name = "hb"
version = "0.1.0"
authors = ["yangcancai <yangcancai@gmail.com>"]
edition = "2018"

[dependencies]
#reqwest = { version = "0.10", default-features = false, features = ["rustls-tls"] }
tokio="^0.1.0"
flate2 = "1.0"
serde_json="1.0"
actix = "0.10.0"
actix-codec = "0.3"
actix-web-actors = "3"
actix-files = "0.3"
awc = "2"
env_logger = "0.8"
futures = "^0.3.1"
bytes = "0.5.3"
actix-web={ version = "3.3.2", default-features = false, features = ["rustls"] }